<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="#C0C0C0"
    android:orientation="horizontal"
    tools:context=".MainActivity" >


    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="405dp"
        android:layout_height="350dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="fill_parent"
            android:layout_height="87dp"
            android:checked="false"
            android:onClick="strategyradioClicked"
            android:text="@string/strategy1"
            android:textSize="15dp" />

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="fill_parent"
            android:layout_height="87dp"
            android:checked="false"
            android:onClick="strategyradioClicked"
            android:text="@string/strategy2"
            android:textSize="15dp" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="fill_parent"
            android:layout_height="87dp"
            android:checked="false"
            android:onClick="strategyradioClicked"
            android:text="@string/strategy3"
            android:textSize="15dp" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="fill_parent"
            android:layout_height="87dp"
            android:checked="false"
            android:onClick="strategyradioClicked"
            android:text="Strategy 4"
            android:textSize="25dp" />
    </RadioGroup>

    <Button
        android:id="@+id/button1"
        android:layout_width="140dp"
        android:layout_height="58dp"
        android:layout_gravity="center"
        android:background="#C0C0C0"
        android:onClick="goToTest"
        android:text="@string/go_to_stocks"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.2">

    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>